fixing mobile jumping

--- a/mobile.css
+++ b/mobile.css
@@ -33,7 +33,7 @@ body{
 .layer2{
 	position: absolute;
 	background-image: url("img/blue.png");
-	top:75%;
+	top:75vh;
 	width:90%;
 	margin-left:5%;
 	height:75%;
@@ -44,7 +44,7 @@ body{
 .layer3{
 	position: absolute;
 	background-image: url("img/yellow.png");
-	top:150%;
+	top:150vh;
 	width:90%;
 	margin-left:5%;
 	border-width: 0;
@@ -54,7 +54,7 @@ body{
 .layer4{
 	position: absolute;
 	background-image: url("img/grey.png");
-	top:225%;
+	top:225vh;
 	width:90%;
 	margin-left:5%;
 	border-width: 0;
@@ -64,7 +64,7 @@ body{
 .layer5{
 	position: absolute;
 	background-image: url("img/yellow.png");
-	top:300%;
+	top:300vh;
 	width:90%;
 	margin-left:5%;
 	border-width: 0;
